# Koch

./: .gitignore  Cargo.toml  ReadME.md
Koch/: chat_history.txt  index.html  koch.config  package.json  package.json (edit)  playwright.config.ts  tailwind.config.js
Koch/.github/chatmodes/: plan.chatmode.md
Koch/src/: App.css  App.tsx  utils.tsx
Koch/src-tauri/: .gitignore  Cargo.toml  loading.html  tauri.conf.json
Koch/src-tauri/bindings/: AiChatMessage.ts  AiChatMessageRole.ts  AiChatStructure.ts  AnalyzerController.ts  Board.ts  BoardMetaData.ts  BoardState.ts  BoardUi.ts  CastleType.ts  ChessPiece.ts  EngineCommand.ts  EngineOption.ts  EvalKind.ts  EvalResponse.ts  EvalType.ts  GameController.ts  GameControllerMode.ts  GameControllerState.ts  GamePhase.ts  GameResult.ts  LocalChat.ts  LocalMessage.ts  LocalMessageRole.ts  MoveError.ts  MoveInfo.ts  MoveKind.ts  MoveStruct.ts  PieceColor.ts  PieceMoves.ts  PieceType.ts  PvLineData.ts  PvObject.ts  SerializedAnalyzerController.ts  SerializedBoard.ts  SerializedBoardMetaData.ts  SerializedGameController.ts  Settings.ts  TerminationBy.ts  TerminationReason.ts  (+2 more)
Koch/tests/: hello.spec.ts
src/: lib.rs  mod.rs
src/analyzer/: board_interactions.rs
src/database/: create.rs  mod.rs  save_game.rs
src/engine/: board.rs  capture.rs  fen.rs  move_gen.rs  piece.rs  simulate.rs  uci.rs
src/game/: controller.rs  evaluator.rs  stockfish_engine.rs
src/ui/: app.rs  board_interaction.rs  chart_render.rs  custom.rs  game_info.rs  mod.rs  popup_render.rs  qote.rs  render.rs  screen_render.rs  theme.rs  ui_setting.rs
(+72 files in other folders)
